# bubba-server

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  client_main.cpp  docker-compose-local.yml  main.cpp  server_main.cpp
bubba-client/inc/: client.hpp
bubba-client/src/: client.cpp
db/: create_tables.sql
db/inc/: db_connection.hpp
db/src/: db_connection.cpp
entities/inc/: message_entity.hpp  user_entity.hpp
entities/src/: message_entity.cpp  user_entity.cpp
protocols/: CMakeLists.txt  chat_message.proto
repositories/: create_tables.sql
repositories/inc/: message_repository.hpp  repository.hpp  user_repository.hpp
repositories/src/: message_repository.cpp  user_repository.cpp
services/inc/: chat_service.hpp  client_socket.hpp  server_socket.hpp
services/src/: chat_service.cpp  client_socket.cpp  server_socket.cpp
services/tst/: CMakeLists.txt  chat_service_test.cpp
